liberty-new testing

--- a/packs/liberty-new/pipeline.yaml
+++ b/packs/liberty-new/pipeline.yaml
@@ -5,6 +5,9 @@ pipelines:
       - name: setup
         steps:
         - groovy: git 'https://github.com/sdaschner/jenkins-x-quickstart-liberty.git'
+        agent:
+          container: maven-java11
+          label: jenkins-maven
 
       - name: build
         steps:
