--- a/packs/liberty-new/pipeline.yaml
+++ b/packs/liberty-new/pipeline.yaml
@@ -29,6 +29,9 @@ pipelines:
           name: container-build
         - sh: jx step post build --image $DOCKER_REGISTRY/$ORG/$APP_NAME:\$(cat VERSION)
           name: post-build
+        agent:
+          container: maven-java11
+          label: jenkins-maven
 
       - name: promote
         steps:
