liberty-new testing

--- a/packs/liberty-new/pipeline.yaml
+++ b/packs/liberty-new/pipeline.yaml
@@ -13,7 +13,7 @@ pipelines:
         steps:
         - sh: echo \$(jx-release-version) > VERSION
           name: next-version
-          comment: so we can retrieve the version in later steps
+#          comment: so we can retrieve the version in later steps
         - sh: mvn versions:set -DnewVersion=\$(cat VERSION)
           name: set-version
         - sh: jx step tag --version \$(cat VERSION)
@@ -39,11 +39,11 @@ pipelines:
           steps:
           - sh: jx step changelog --version v\$(cat ../../VERSION)
             name: changelog
-          - comment: release the helm chart
-            sh: jx step helm release
+#          - comment: release the helm chart
+          - sh: jx step helm release
             name: helm-release
-          - comment: promote through all 'Auto' promotion Environments
-            sh: jx promote -b --all-auto --timeout 1h --version \$(cat ../../VERSION)
+#          - comment: promote through all 'Auto' promotion Environments
+          - sh: jx promote -b --all-auto --timeout 1h --version \$(cat ../../VERSION)
             name: jx-promote
           - sh: echo waiting for promotion to be fully rolled-out
             name: wait-deployment
