--- a/packs/liberty-new/pipeline.yaml
+++ b/packs/liberty-new/pipeline.yaml
@@ -47,12 +47,18 @@ pipelines:
             name: jx-promote
           - sh: echo waiting for promotion to be fully rolled-out
             name: wait-deployment
+        agent:
+          container: maven-java11
+          label: jenkins-maven
 
       - name: system-test
         steps:
         #          - sh: mvn failsafe:integration-test failsafe:verify -Dliberty.test.host=jenkins-x-quickstart-liberty.jx-production.34.90.141.229.nip.io -Dliberty.test.port=80
         - sh: echo doing system test; sleep 3
           name: mvn-liberty-integration-test
+        agent:
+          container: maven-java11
+          label: jenkins-maven
 
 agent:
   container: maven-java11
