--- a/packs/liberty-new/pipeline.yaml
+++ b/packs/liberty-new/pipeline.yaml
@@ -5,9 +5,6 @@ pipelines:
 #      - name: setup
 #        steps:
 #        - groovy: git 'https://github.com/sdaschner/jenkins-x-quickstart-liberty.git'
-#        agent:
-#          container: maven-java11
-#          label: jenkins-maven
 
       - name: build
         steps:
@@ -29,9 +26,6 @@ pipelines:
           name: container-build
         - sh: jx step post build --image $DOCKER_REGISTRY/$ORG/$APP_NAME:\$(cat VERSION)
           name: post-build
-        agent:
-          container: maven-java11
-          label: jenkins-maven
 
       - name: promote
         steps:
@@ -45,19 +39,12 @@ pipelines:
           name: jx-promote
         - sh: echo waiting for promotion to be fully rolled-out
           name: wait-deployment
-        agent:
-          container: maven-java11
-          label: jenkins-maven
 
       - name: system-test
         steps:
         #          - sh: mvn failsafe:integration-test failsafe:verify -Dliberty.test.host=jenkins-x-quickstart-liberty.jx-production.34.90.141.229.nip.io -Dliberty.test.port=80
         - sh: echo doing system test; sleep 3
           name: mvn-liberty-integration-test
-        agent:
-          container: maven-java11
-          label: jenkins-maven
-
-agent:
-  container: maven-java11
-  label: jenkins-maven
+      agent:
+        image: maven-java11
+        label: jenkins-maven
