--- a/packs/liberty-new/pipeline.yaml
+++ b/packs/liberty-new/pipeline.yaml
@@ -8,12 +8,12 @@ pipelines:
 
       - name: build
         steps:
-        - sh: echo \$(jx-release-version) > VERSION
+        - sh: echo $(jx-release-version) > VERSION
           name: next-version
 #          comment: so we can retrieve the version in later steps
-        - sh: mvn versions:set -DnewVersion=\$(cat VERSION)
+        - sh: mvn versions:set -DnewVersion=$(cat VERSION)
           name: set-version
-        - sh: jx step tag --version \$(cat VERSION)
+        - sh: jx step tag --version $(cat VERSION)
           name: tag-version
         - sh: mvn clean deploy
           name: mvn-deploy
@@ -24,18 +24,18 @@ pipelines:
           name: skaffold-version
         - sh: export VERSION=`cat VERSION` && skaffold build -f skaffold.yaml
           name: container-build
-        - sh: jx step post build --image $DOCKER_REGISTRY/$ORG/$APP_NAME:\$(cat VERSION)
+        - sh: jx step post build --image $DOCKER_REGISTRY/$ORG/$APP_NAME:$(cat VERSION)
           name: post-build
 
       - name: promote
         steps:
-        - sh: jx step changelog --version v\$(cat ../../VERSION)
+        - sh: jx step changelog --version v$(cat ../../VERSION)
           name: changelog
           dir: charts/jenkins-x-quickstart-liberty
         - sh: jx step helm release
           name: helm-release
           dir: charts/jenkins-x-quickstart-liberty
-        - sh: jx promote -b --all-auto --timeout 1h --version \$(cat ../../VERSION)
+        - sh: jx promote -b --all-auto --timeout 1h --version $(cat ../../VERSION)
           name: jx-promote
         - sh: echo waiting for promotion to be fully rolled-out
           name: wait-deployment
