--- a/packs/liberty-new/pipeline.yaml
+++ b/packs/liberty-new/pipeline.yaml
@@ -2,15 +2,11 @@ pipelines:
   release:
     pipeline:
       stages:
-#      - name: setup
-#        steps:
-#        - groovy: git 'https://github.com/sdaschner/jenkins-x-quickstart-liberty.git'
 
       - name: build
         steps:
         - sh: echo $(jx-release-version) > VERSION
           name: next-version
-#          comment: so we can retrieve the version in later steps
         - sh: mvn versions:set -DnewVersion=$(cat VERSION)
           name: set-version
         - sh: jx step tag --version $(cat VERSION)
@@ -40,6 +36,43 @@ pipelines:
           dir: charts/jenkins-x-quickstart-liberty
         - sh: echo waiting for promotion to be fully rolled-out
           name: wait-deployment
+
+      - name: system-test
+        steps:
+        #          - sh: mvn failsafe:integration-test failsafe:verify -Dliberty.test.host=jenkins-x-quickstart-liberty.jx-production.34.90.141.229.nip.io -Dliberty.test.port=80
+        - sh: echo doing system test; sleep 3
+          name: mvn-liberty-integration-test
+      agent:
+        image: maven-java11
+
+  pullRequest:
+    pipeline:
+      stages:
+      - name: build
+        steps:
+        - sh: mvn versions:set -DnewVersion=$PREVIEW_VERSION
+          name: set-version
+        - sh: mvn clean install
+          name: mvn-install
+        #        - sh: mvn liberty:create-server liberty:install-feature liberty:install-apps liberty:start-server failsafe:integration-test liberty:stop-server failsafe:verify
+        - sh: echo doing integration test; sleep 3
+          name: mvn-liberty-integration-test
+        - sh: skaffold version
+          name: skaffold-version
+        - sh: export VERSION=$PREVIEW_VERSION && skaffold build -f skaffold.yaml
+          name: container-build
+        - sh: jx step post build --image $DOCKER_REGISTRY/$ORG/$APP_NAME:$(cat VERSION)
+          name: post-build
+
+      - name: promote
+        steps:
+
+        - sh: make preview
+          name: make-preview
+          dir: charts/preview
+        - sh: jx preview --app $APP_NAME --dir ../..
+          name: jx-preview
+          dir: charts/preview
 
       - name: system-test
         steps:
