--- a/packs/liberty-new/charts/templates/deployment.yaml
+++ b/packs/liberty-new/charts/templates/deployment.yaml
@@ -42,6 +42,7 @@ spec:
           httpGet:
             path: {{ .Values.probePath }}
             port: {{ .Values.service.internalPort }}
+          initialDelaySeconds: {{ .Values.readinessProbe.initialDelaySeconds }}
           periodSeconds: {{ .Values.readinessProbe.periodSeconds }}
           successThreshold: {{ .Values.readinessProbe.successThreshold }}
           timeoutSeconds: {{ .Values.readinessProbe.timeoutSeconds }}
