--- a/packs/liberty/charts/values.yaml
+++ b/packs/liberty/charts/values.yaml
@@ -23,7 +23,7 @@ service:
     fabric8.io/ingress.annotations: "kubernetes.io/ingress.class: nginx"
 resources:
   limits:
-    cpu: 500m
+    cpu: 1
     memory: 512Mi
   requests:
     cpu: 400m
@@ -35,6 +35,7 @@ livenessProbe:
   successThreshold: 1
   timeoutSeconds: 1
 readinessProbe:
+  initialDelaySeconds: 60
   periodSeconds: 10
   successThreshold: 1
   timeoutSeconds: 1
