--- a/packs/liberty/charts/templates/ksvc.yaml
+++ b/packs/liberty/charts/templates/ksvc.yaml
@@ -32,6 +32,7 @@ spec:
             readinessProbe:
               httpGet:
                 path: {{ .Values.probePath }}
+              initialDelaySeconds: {{ .Values.readinessProbe.initialDelaySeconds }}
               periodSeconds: {{ .Values.readinessProbe.periodSeconds }}
               successThreshold: {{ .Values.readinessProbe.successThreshold }}
               timeoutSeconds: {{ .Values.readinessProbe.timeoutSeconds }}
