--- a/packs/liberty-new/pipeline.yaml
+++ b/packs/liberty-new/pipeline.yaml
@@ -42,8 +42,8 @@ pipelines:
         #          - sh: mvn failsafe:integration-test failsafe:verify -Dliberty.test.host=jenkins-x-quickstart-liberty.jx-production.34.90.141.229.nip.io -Dliberty.test.port=80
         - sh: echo doing system test; sleep 3
           name: mvn-liberty-integration-test
-      agent:
-        image: maven-java11
+#      agent:
+#        image: maven-java11
 
   pullRequest:
     pipeline:
@@ -78,5 +78,5 @@ pipelines:
         #          - sh: mvn failsafe:integration-test failsafe:verify -Dliberty.test.host=jenkins-x-quickstart-liberty.jx-production.34.90.141.229.nip.io -Dliberty.test.port=80
         - sh: echo doing system test; sleep 3
           name: mvn-liberty-integration-test
-      agent:
-        image: maven-java11
+#      agent:
+#        image: maven-java11
