--- a/packs/liberty-new/pipeline.yaml
+++ b/packs/liberty-new/pipeline.yaml
@@ -7,9 +7,8 @@ pipelines:
       steps:
       - sh: mvn versions:set -DnewVersion=$PREVIEW_VERSION
         name: set-version
-      - sh: ls *.sql | sort -r | head -1 | sed -e 's/_.*//' > DB_VERSION
+      - sh: ls database/rollouts/*.sql | sort -r | head -1 | sed -e 's/_.*//' > DB_VERSION
         name: database-schema-version
-        dir: database/rollouts
       - sh: mvn clean install
         name: mvn-install
       #        - sh: mvn liberty:create-server liberty:install-feature liberty:install-apps liberty:start-server failsafe:integration-test liberty:stop-server failsafe:verify
@@ -33,9 +32,8 @@ pipelines:
       steps:
       - sh: echo \$(jx-release-version) > VERSION
         name: next-version
-      - sh: ls *.sql | sort -r | head -1 | sed -e 's/_.*//' > DB_VERSION
+      - sh: ls database/rollouts/*.sql | sort -r | head -1 | sed -e 's/_.*//' > DB_VERSION
         name: database-schema-version
-        dir: database/rollouts
       - sh: mvn versions:set -DnewVersion=\$(cat VERSION)
         name: set-version
       - sh: jx step tag --version \$(cat VERSION)
